crates/hexeract-macros/tests/ui/fail_ctx_mut.stderr
error: the context must be taken by shared reference `&HandlerContext`, not `&mut`
  --> tests/ui/fail_ctx_mut.rs:12:14
   |
12 |         ctx: &mut HandlerContext,
   |              ^^^^^^^^^^^^^^^^^^^
